# pymake

./: .cspell.json  .pre-commit-config.yaml  README.md  pyproject.toml
src/pymake/: __init__.py  __main__.py
