[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ email = "i@liblaf.me", name = "liblaf" }]
dependencies = []
description = "Add your description here"
name = "pymake"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.0.0"

[project.scripts]
hello = "pymake:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pymake"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = []
managed = true
